--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world!</p>
+    <p>Hello world!!!</p>
 
  
 <script src="js/script.js"></script>
