--- a/js/index.html
+++ b/js/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LUL</title>
 </head>
 <body>
-    <p>Hello world!!!</p>
+    <br><br> <br><br> <br><br> <br><br> <br><br> 
+    <sub><h1><center>hello world!</center></h1></sub>
 
  
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
